[gd_scene load_steps=5 format=3 uid="uid://dek51bt5lyb66"]

[ext_resource type="Script" uid="uid://3ayeuwl67kot" path="res://feature/item_action/item_action.gd" id="1_thsb4"]
[ext_resource type="PackedScene" uid="uid://ccyeuduk7vphu" path="res://feature/item_action/internal/character_property_value.tscn" id="2_2yibf"]
[ext_resource type="Script" uid="uid://bt6x5481dd855" path="res://feature/items_grid/items_grid.gd" id="3_0ahuu"]
[ext_resource type="Texture2D" uid="uid://bmccnd514bgbc" path="res://icon.svg" id="4_k0ap7"]

[node name="ItemAction" type="PanelContainer"]
offset_right = 352.0
offset_bottom = 91.0
script = ExtResource("1_thsb4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PropertiesContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PropertyValue" parent="MarginContainer/VBoxContainer/PropertiesContainer" instance=ExtResource("2_2yibf")]
layout_mode = 2

[node name="PropertyValue2" parent="MarginContainer/VBoxContainer/PropertiesContainer" instance=ExtResource("2_2yibf")]
layout_mode = 2

[node name="PropertyValue3" parent="MarginContainer/VBoxContainer/PropertiesContainer" instance=ExtResource("2_2yibf")]
layout_mode = 2

[node name="PropertyValue4" parent="MarginContainer/VBoxContainer/PropertiesContainer" instance=ExtResource("2_2yibf")]
layout_mode = 2

[node name="PropertyValue5" parent="MarginContainer/VBoxContainer/PropertiesContainer" instance=ExtResource("2_2yibf")]
layout_mode = 2

[node name="PropertyValue6" parent="MarginContainer/VBoxContainer/PropertiesContainer" instance=ExtResource("2_2yibf")]
layout_mode = 2

[node name="ItemsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="NeedLabel" type="Label" parent="MarginContainer/VBoxContainer/ItemsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Нужно:"
horizontal_alignment = 1

[node name="NeedSlotCotroller" type="GridContainer" parent="MarginContainer/VBoxContainer/ItemsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 54)
layout_mode = 2
columns = 2
script = ExtResource("3_0ahuu")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/ItemsContainer"]
visible = false
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_k0ap7")
expand_mode = 1
stretch_mode = 5

[node name="RewardLabel" type="Label" parent="MarginContainer/VBoxContainer/ItemsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Получишь:"
horizontal_alignment = 1

[node name="RewardSlotCotroller" type="GridContainer" parent="MarginContainer/VBoxContainer/ItemsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 54)
layout_mode = 2
columns = 2
script = ExtResource("3_0ahuu")

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "use"

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
